// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`viewOptionsReducer should handle all defined fulfilled types: fulfilled types GET_CREDENTIALS 1`] = `
Object {
  "result": Object {
    "CREDENTIALS_VIEW": Object {
      "activeFilters": Array [],
      "currentPage": 1,
      "expandedItems": Array [],
      "filterType": null,
      "filterValue": "",
      "pageSize": 10,
      "selectedItems": Array [],
      "sortAscending": true,
      "sortField": "name",
      "sortType": null,
      "totalCount": undefined,
      "totalPages": NaN,
    },
    "SCANS_VIEW": Object {
      "activeFilters": Array [],
      "currentPage": 1,
      "expandedItems": Array [],
      "filterType": null,
      "filterValue": "",
      "pageSize": 10,
      "selectedItems": Array [],
      "sortAscending": true,
      "sortField": "name",
      "sortType": null,
      "totalCount": 0,
      "totalPages": 0,
    },
    "SOURCES_VIEW": Object {
      "activeFilters": Array [],
      "currentPage": 1,
      "expandedItems": Array [],
      "filterType": null,
      "filterValue": "",
      "pageSize": 10,
      "selectedItems": Array [],
      "sortAscending": true,
      "sortField": "name",
      "sortType": null,
      "totalCount": 0,
      "totalPages": 0,
    },
  },
  "type": "GET_CREDENTIALS_FULFILLED",
}
`;

exports[`viewOptionsReducer should handle all defined fulfilled types: fulfilled types GET_SCANS 1`] = `
Object {
  "result": Object {
    "CREDENTIALS_VIEW": Object {
      "activeFilters": Array [],
      "currentPage": 1,
      "expandedItems": Array [],
      "filterType": null,
      "filterValue": "",
      "pageSize": 10,
      "selectedItems": Array [],
      "sortAscending": true,
      "sortField": "name",
      "sortType": null,
      "totalCount": 0,
      "totalPages": 0,
    },
    "SCANS_VIEW": Object {
      "activeFilters": Array [],
      "currentPage": 1,
      "expandedItems": Array [],
      "filterType": null,
      "filterValue": "",
      "pageSize": 10,
      "selectedItems": Array [],
      "sortAscending": true,
      "sortField": "name",
      "sortType": null,
      "totalCount": undefined,
      "totalPages": NaN,
    },
    "SOURCES_VIEW": Object {
      "activeFilters": Array [],
      "currentPage": 1,
      "expandedItems": Array [],
      "filterType": null,
      "filterValue": "",
      "pageSize": 10,
      "selectedItems": Array [],
      "sortAscending": true,
      "sortField": "name",
      "sortType": null,
      "totalCount": 0,
      "totalPages": 0,
    },
  },
  "type": "GET_SCANS_FULFILLED",
}
`;

exports[`viewOptionsReducer should handle all defined fulfilled types: fulfilled types GET_SOURCES 1`] = `
Object {
  "result": Object {
    "CREDENTIALS_VIEW": Object {
      "activeFilters": Array [],
      "currentPage": 1,
      "expandedItems": Array [],
      "filterType": null,
      "filterValue": "",
      "pageSize": 10,
      "selectedItems": Array [],
      "sortAscending": true,
      "sortField": "name",
      "sortType": null,
      "totalCount": 0,
      "totalPages": 0,
    },
    "SCANS_VIEW": Object {
      "activeFilters": Array [],
      "currentPage": 1,
      "expandedItems": Array [],
      "filterType": null,
      "filterValue": "",
      "pageSize": 10,
      "selectedItems": Array [],
      "sortAscending": true,
      "sortField": "name",
      "sortType": null,
      "totalCount": 0,
      "totalPages": 0,
    },
    "SOURCES_VIEW": Object {
      "activeFilters": Array [],
      "currentPage": 1,
      "expandedItems": Array [],
      "filterType": null,
      "filterValue": "",
      "pageSize": 10,
      "selectedItems": Array [],
      "sortAscending": true,
      "sortField": "name",
      "sortType": null,
      "totalCount": undefined,
      "totalPages": NaN,
    },
  },
  "type": "GET_SOURCES_FULFILLED",
}
`;

exports[`viewOptionsReducer should handle specific defined types: defined type ADD_FILTER 1`] = `
Object {
  "result": Object {
    "CREDENTIALS_VIEW": Object {
      "activeFilters": Array [],
      "currentPage": 1,
      "expandedItems": Array [],
      "filterType": null,
      "filterValue": "",
      "pageSize": 10,
      "selectedItems": Array [],
      "sortAscending": true,
      "sortField": "name",
      "sortType": null,
      "totalCount": 0,
      "totalPages": 0,
    },
    "SCANS_VIEW": Object {
      "activeFilters": Array [],
      "currentPage": 1,
      "expandedItems": Array [],
      "filterType": null,
      "filterValue": "",
      "pageSize": 10,
      "selectedItems": Array [],
      "sortAscending": true,
      "sortField": "name",
      "sortType": null,
      "totalCount": 0,
      "totalPages": 0,
    },
    "SOURCES_VIEW": Object {
      "activeFilters": Array [
        undefined,
      ],
      "currentPage": 1,
      "expandedItems": Array [],
      "filterType": null,
      "filterValue": "",
      "pageSize": 10,
      "selectedItems": Array [],
      "sortAscending": true,
      "sortField": "name",
      "sortType": null,
      "totalCount": 0,
      "totalPages": 0,
    },
  },
  "type": "ADD_FILTER",
}
`;

exports[`viewOptionsReducer should handle specific defined types: defined type CLEAR_FILTERS 1`] = `
Object {
  "result": Object {
    "CREDENTIALS_VIEW": Object {
      "activeFilters": Array [],
      "currentPage": 1,
      "expandedItems": Array [],
      "filterType": null,
      "filterValue": "",
      "pageSize": 10,
      "selectedItems": Array [],
      "sortAscending": true,
      "sortField": "name",
      "sortType": null,
      "totalCount": 0,
      "totalPages": 0,
    },
    "SCANS_VIEW": Object {
      "activeFilters": Array [],
      "currentPage": 1,
      "expandedItems": Array [],
      "filterType": null,
      "filterValue": "",
      "pageSize": 10,
      "selectedItems": Array [],
      "sortAscending": true,
      "sortField": "name",
      "sortType": null,
      "totalCount": 0,
      "totalPages": 0,
    },
    "SOURCES_VIEW": Object {
      "activeFilters": Array [],
      "currentPage": 1,
      "expandedItems": Array [],
      "filterType": null,
      "filterValue": "",
      "pageSize": 10,
      "selectedItems": Array [],
      "sortAscending": true,
      "sortField": "name",
      "sortType": null,
      "totalCount": 0,
      "totalPages": 0,
    },
  },
  "type": "CLEAR_FILTERS",
}
`;

exports[`viewOptionsReducer should handle specific defined types: defined type REMOVE_FILTER 1`] = `
Object {
  "result": Object {
    "CREDENTIALS_VIEW": Object {
      "activeFilters": Array [],
      "currentPage": 1,
      "expandedItems": Array [],
      "filterType": null,
      "filterValue": "",
      "pageSize": 10,
      "selectedItems": Array [],
      "sortAscending": true,
      "sortField": "name",
      "sortType": null,
      "totalCount": 0,
      "totalPages": 0,
    },
    "SCANS_VIEW": Object {
      "activeFilters": Array [],
      "currentPage": 1,
      "expandedItems": Array [],
      "filterType": null,
      "filterValue": "",
      "pageSize": 10,
      "selectedItems": Array [],
      "sortAscending": true,
      "sortField": "name",
      "sortType": null,
      "totalCount": 0,
      "totalPages": 0,
    },
    "SOURCES_VIEW": Object {
      "activeFilters": Array [],
      "currentPage": 1,
      "expandedItems": Array [],
      "filterType": null,
      "filterValue": "",
      "pageSize": 10,
      "selectedItems": Array [],
      "sortAscending": true,
      "sortField": "name",
      "sortType": null,
      "totalCount": 0,
      "totalPages": 0,
    },
  },
  "type": "REMOVE_FILTER",
}
`;

exports[`viewOptionsReducer should handle specific defined types: defined type SET_FILTER_TYPE 1`] = `
Object {
  "result": Object {
    "CREDENTIALS_VIEW": Object {
      "activeFilters": Array [],
      "currentPage": 1,
      "expandedItems": Array [],
      "filterType": null,
      "filterValue": "",
      "pageSize": 10,
      "selectedItems": Array [],
      "sortAscending": true,
      "sortField": "name",
      "sortType": null,
      "totalCount": 0,
      "totalPages": 0,
    },
    "SCANS_VIEW": Object {
      "activeFilters": Array [],
      "currentPage": 1,
      "expandedItems": Array [],
      "filterType": null,
      "filterValue": "",
      "pageSize": 10,
      "selectedItems": Array [],
      "sortAscending": true,
      "sortField": "name",
      "sortType": null,
      "totalCount": 0,
      "totalPages": 0,
    },
    "SOURCES_VIEW": Object {
      "activeFilters": Array [],
      "currentPage": 1,
      "expandedItems": Array [],
      "filterType": undefined,
      "filterValue": "",
      "pageSize": 10,
      "selectedItems": Array [],
      "sortAscending": true,
      "sortField": "name",
      "sortType": null,
      "totalCount": 0,
      "totalPages": 0,
    },
  },
  "type": "SET_FILTER_TYPE",
}
`;

exports[`viewOptionsReducer should handle specific defined types: defined type SET_FILTER_VALUE 1`] = `
Object {
  "result": Object {
    "CREDENTIALS_VIEW": Object {
      "activeFilters": Array [],
      "currentPage": 1,
      "expandedItems": Array [],
      "filterType": null,
      "filterValue": "",
      "pageSize": 10,
      "selectedItems": Array [],
      "sortAscending": true,
      "sortField": "name",
      "sortType": null,
      "totalCount": 0,
      "totalPages": 0,
    },
    "SCANS_VIEW": Object {
      "activeFilters": Array [],
      "currentPage": 1,
      "expandedItems": Array [],
      "filterType": null,
      "filterValue": "",
      "pageSize": 10,
      "selectedItems": Array [],
      "sortAscending": true,
      "sortField": "name",
      "sortType": null,
      "totalCount": 0,
      "totalPages": 0,
    },
    "SOURCES_VIEW": Object {
      "activeFilters": Array [],
      "currentPage": 1,
      "expandedItems": Array [],
      "filterType": null,
      "filterValue": undefined,
      "pageSize": 10,
      "selectedItems": Array [],
      "sortAscending": true,
      "sortField": "name",
      "sortType": null,
      "totalCount": 0,
      "totalPages": 0,
    },
  },
  "type": "SET_FILTER_VALUE",
}
`;

exports[`viewOptionsReducer should handle specific defined types: defined type SET_PER_PAGE 1`] = `
Object {
  "result": Object {
    "CREDENTIALS_VIEW": Object {
      "activeFilters": Array [],
      "currentPage": 1,
      "expandedItems": Array [],
      "filterType": null,
      "filterValue": "",
      "pageSize": 10,
      "selectedItems": Array [],
      "sortAscending": true,
      "sortField": "name",
      "sortType": null,
      "totalCount": 0,
      "totalPages": 0,
    },
    "SCANS_VIEW": Object {
      "activeFilters": Array [],
      "currentPage": 1,
      "expandedItems": Array [],
      "filterType": null,
      "filterValue": "",
      "pageSize": 10,
      "selectedItems": Array [],
      "sortAscending": true,
      "sortField": "name",
      "sortType": null,
      "totalCount": 0,
      "totalPages": 0,
    },
    "SOURCES_VIEW": Object {
      "activeFilters": Array [],
      "currentPage": 1,
      "expandedItems": Array [],
      "filterType": null,
      "filterValue": "",
      "pageSize": undefined,
      "selectedItems": Array [],
      "sortAscending": true,
      "sortField": "name",
      "sortType": null,
      "totalCount": 0,
      "totalPages": 0,
    },
  },
  "type": "SET_PER_PAGE",
}
`;

exports[`viewOptionsReducer should handle specific defined types: defined type SET_SORT_TYPE 1`] = `
Object {
  "result": Object {
    "CREDENTIALS_VIEW": Object {
      "activeFilters": Array [],
      "currentPage": 1,
      "expandedItems": Array [],
      "filterType": null,
      "filterValue": "",
      "pageSize": 10,
      "selectedItems": Array [],
      "sortAscending": true,
      "sortField": "name",
      "sortType": null,
      "totalCount": 0,
      "totalPages": 0,
    },
    "SCANS_VIEW": Object {
      "activeFilters": Array [],
      "currentPage": 1,
      "expandedItems": Array [],
      "filterType": null,
      "filterValue": "",
      "pageSize": 10,
      "selectedItems": Array [],
      "sortAscending": true,
      "sortField": "name",
      "sortType": null,
      "totalCount": 0,
      "totalPages": 0,
    },
    "SOURCES_VIEW": Object {
      "activeFilters": Array [],
      "currentPage": 1,
      "expandedItems": Array [],
      "filterType": null,
      "filterValue": "",
      "pageSize": 10,
      "selectedItems": Array [],
      "sortAscending": true,
      "sortField": undefined,
      "sortType": undefined,
      "totalCount": 0,
      "totalPages": 0,
    },
  },
  "type": "SET_SORT_TYPE",
}
`;

exports[`viewOptionsReducer should handle specific defined types: defined type TOGGLE_SORT_ASCENDING 1`] = `
Object {
  "result": Object {
    "CREDENTIALS_VIEW": Object {
      "activeFilters": Array [],
      "currentPage": 1,
      "expandedItems": Array [],
      "filterType": null,
      "filterValue": "",
      "pageSize": 10,
      "selectedItems": Array [],
      "sortAscending": true,
      "sortField": "name",
      "sortType": null,
      "totalCount": 0,
      "totalPages": 0,
    },
    "SCANS_VIEW": Object {
      "activeFilters": Array [],
      "currentPage": 1,
      "expandedItems": Array [],
      "filterType": null,
      "filterValue": "",
      "pageSize": 10,
      "selectedItems": Array [],
      "sortAscending": true,
      "sortField": "name",
      "sortType": null,
      "totalCount": 0,
      "totalPages": 0,
    },
    "SOURCES_VIEW": Object {
      "activeFilters": Array [],
      "currentPage": 1,
      "expandedItems": Array [],
      "filterType": null,
      "filterValue": "",
      "pageSize": 10,
      "selectedItems": Array [],
      "sortAscending": false,
      "sortField": "name",
      "sortType": null,
      "totalCount": 0,
      "totalPages": 0,
    },
  },
  "type": "TOGGLE_SORT_ASCENDING",
}
`;

exports[`viewOptionsReducer should handle specific defined types: defined type VIEW_PAGE 1`] = `
Object {
  "result": Object {
    "CREDENTIALS_VIEW": Object {
      "activeFilters": Array [],
      "currentPage": 1,
      "expandedItems": Array [],
      "filterType": null,
      "filterValue": "",
      "pageSize": 10,
      "selectedItems": Array [],
      "sortAscending": true,
      "sortField": "name",
      "sortType": null,
      "totalCount": 0,
      "totalPages": 0,
    },
    "SCANS_VIEW": Object {
      "activeFilters": Array [],
      "currentPage": 1,
      "expandedItems": Array [],
      "filterType": null,
      "filterValue": "",
      "pageSize": 10,
      "selectedItems": Array [],
      "sortAscending": true,
      "sortField": "name",
      "sortType": null,
      "totalCount": 0,
      "totalPages": 0,
    },
    "SOURCES_VIEW": Object {
      "activeFilters": Array [],
      "currentPage": undefined,
      "expandedItems": Array [],
      "filterType": null,
      "filterValue": "",
      "pageSize": 10,
      "selectedItems": Array [],
      "sortAscending": true,
      "sortField": "name",
      "sortType": null,
      "totalCount": 0,
      "totalPages": 0,
    },
  },
  "type": "VIEW_PAGE",
}
`;
